test/trivial/roxana/test_param_decl2.good
Error: Initializing parameter 'h' to value not known at compile time (test_param_decl2.chpl:2)
