test/trivial/roxana/test_param_decl2.chpl
var t : integer;
param h = t;
write(h);
